--- a/century21.ipynb
+++ b/century21.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "895d5ba7",
+   "execution_count": 43,
+   "id": "b8971dd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$725,000'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -18,6 +29,135 @@
     "\n",
     "all[0].find('h4', {'class': 'propPrice'}).text.replace('\\n', '').replace(' ','')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6d93f25d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$725,000\n",
+      "0 Gateway\n",
+      "Rock Springs, WY 82901\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      " \n",
+      "$452,900\n",
+      "1003 Winchester Blvd.\n",
+      "Rock Springs, WY 82901\n",
+      "4\n",
+      "None\n",
+      "4\n",
+      "None\n",
+      " \n",
+      "$396,900\n",
+      "600 Talladega\n",
+      "Rock Springs, WY 82901\n",
+      "5\n",
+      "3,154\n",
+      "3\n",
+      "None\n",
+      " \n",
+      "$389,900\n",
+      "3239 Spearhead Way\n",
+      "Rock Springs, WY 82901\n",
+      "4\n",
+      "3,076\n",
+      "3\n",
+      "1\n",
+      " \n",
+      "$254,000\n",
+      "522 Emerald Street\n",
+      "Rock Springs, WY 82901\n",
+      "3\n",
+      "1,172\n",
+      "3\n",
+      "None\n",
+      " \n",
+      "$252,900\n",
+      "1302 Veteran's Drive\n",
+      "Rock Springs, WY 82901\n",
+      "4\n",
+      "1,932\n",
+      "2\n",
+      "None\n",
+      " \n",
+      "$210,000\n",
+      "1021 Cypress Cir\n",
+      "Rock Springs, WY 82901\n",
+      "4\n",
+      "1,676\n",
+      "3\n",
+      "None\n",
+      " \n",
+      "$209,000\n",
+      "913 Madison Dr\n",
+      "Rock Springs, WY 82901\n",
+      "3\n",
+      "1,344\n",
+      "2\n",
+      "None\n",
+      " \n",
+      "$199,900\n",
+      "1344 Teton Street\n",
+      "Rock Springs, WY 82901\n",
+      "3\n",
+      "1,920\n",
+      "2\n",
+      "None\n",
+      " \n",
+      "$196,900\n",
+      "4 Minnies Lane\n",
+      "Rock Springs, WY 82901\n",
+      "3\n",
+      "1,664\n",
+      "2\n",
+      "None\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in all:\n",
+    "    print(item.find('h4', {'class': 'propPrice'}).text.replace('\\n', '').replace(' ',''))\n",
+    "    print(item.find_all('span', {'class': 'propAddressCollapse'})[0].text)\n",
+    "    print(item.find_all('span', {'class': 'propAddressCollapse'})[1].text)\n",
+    "    try:\n",
+    "        print(item.find('span', {'class': 'infoBed'}).find('b').text)\n",
+    "    except:\n",
+    "        print(None)\n",
+    "    \n",
+    "    try:\n",
+    "        print(item.find('span', {'class': 'infoSqFt'}).find('b').text)\n",
+    "    except:\n",
+    "        print(None)\n",
+    "        \n",
+    "    try:\n",
+    "        print(item.find('span', {'class': 'infoValueFullBath'}).find('b').text)\n",
+    "    except:\n",
+    "        print(None)\n",
+    "    \n",
+    "    try:\n",
+    "        print(item.find('span', {'class': 'infoValueHalfBath'}).find('b').text)\n",
+    "    except:\n",
+    "        print(None)\n",
+    "    \n",
+    "    print(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "470f7777",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
