Extracted all information about our objects. (Scraping special elements)

--- a/century21.ipynb
+++ b/century21.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b8971dd3",
+   "id": "266e3ddf",
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "6d93f25d",
+   "execution_count": 63,
+   "id": "b2642d3b",
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,7 @@
       "None\n",
       "4\n",
       "None\n",
+      "0.21 Acres\n",
       " \n",
       "$396,900\n",
       "600 Talladega\n",
@@ -71,6 +72,7 @@
       "3,076\n",
       "3\n",
       "1\n",
+      "Under 1/2 Acre, \n",
       " \n",
       "$254,000\n",
       "522 Emerald Street\n",
@@ -79,6 +81,7 @@
       "1,172\n",
       "3\n",
       "None\n",
+      "Under 1/2 Acre, \n",
       " \n",
       "$252,900\n",
       "1302 Veteran's Drive\n",
@@ -87,6 +90,7 @@
       "1,932\n",
       "2\n",
       "None\n",
+      "0.27 Acres\n",
       " \n",
       "$210,000\n",
       "1021 Cypress Cir\n",
@@ -95,6 +99,7 @@
       "1,676\n",
       "3\n",
       "None\n",
+      "Under 1/2 Acre, \n",
       " \n",
       "$209,000\n",
       "913 Madison Dr\n",
@@ -103,6 +108,7 @@
       "1,344\n",
       "2\n",
       "None\n",
+      "Under 1/2 Acre, \n",
       " \n",
       "$199,900\n",
       "1344 Teton Street\n",
@@ -111,6 +117,7 @@
       "1,920\n",
       "2\n",
       "None\n",
+      "Under 1/2 Acre, \n",
       " \n",
       "$196,900\n",
       "4 Minnies Lane\n",
@@ -119,6 +126,7 @@
       "1,664\n",
       "2\n",
       "None\n",
+      "2.02 Acres\n",
       " \n"
      ]
     }
@@ -147,14 +155,20 @@
     "        print(item.find('span', {'class': 'infoValueHalfBath'}).find('b').text)\n",
     "    except:\n",
     "        print(None)\n",
-    "    \n",
+    "    for column_group in item.find_all('div', {'class': 'columnGroup'}):\n",
+    "#         print(column_group)\n",
+    "        for feature_group, feature_name in zip(column_group.find_all('span', {'class': 'featureGroup'}), column_group.find_all('span', {'class': 'featureName'})):\n",
+    "#             print(feature_group.text, feature_name.text)\n",
+    "            if \"Lot Size\" in feature_group.text:\n",
+    "                print(feature_name.text)\n",
+    "\n",
     "    print(' ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470f7777",
+   "id": "46f5b907",
    "metadata": {},
    "outputs": [],
    "source": []
