--- a/century21.ipynb
+++ b/century21.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "266e3ddf",
+   "id": "a3c59564",
    "metadata": {},
    "outputs": [
     {
@@ -32,146 +32,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "b2642d3b",
+   "execution_count": 65,
+   "id": "1ce81798",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$725,000\n",
-      "0 Gateway\n",
-      "Rock Springs, WY 82901\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
       " \n",
-      "$452,900\n",
-      "1003 Winchester Blvd.\n",
-      "Rock Springs, WY 82901\n",
-      "4\n",
-      "None\n",
-      "4\n",
-      "None\n",
-      "0.21 Acres\n",
       " \n",
-      "$396,900\n",
-      "600 Talladega\n",
-      "Rock Springs, WY 82901\n",
-      "5\n",
-      "3,154\n",
-      "3\n",
-      "None\n",
       " \n",
-      "$389,900\n",
-      "3239 Spearhead Way\n",
-      "Rock Springs, WY 82901\n",
-      "4\n",
-      "3,076\n",
-      "3\n",
-      "1\n",
-      "Under 1/2 Acre, \n",
       " \n",
-      "$254,000\n",
-      "522 Emerald Street\n",
-      "Rock Springs, WY 82901\n",
-      "3\n",
-      "1,172\n",
-      "3\n",
-      "None\n",
-      "Under 1/2 Acre, \n",
       " \n",
-      "$252,900\n",
-      "1302 Veteran's Drive\n",
-      "Rock Springs, WY 82901\n",
-      "4\n",
-      "1,932\n",
-      "2\n",
-      "None\n",
-      "0.27 Acres\n",
       " \n",
-      "$210,000\n",
-      "1021 Cypress Cir\n",
-      "Rock Springs, WY 82901\n",
-      "4\n",
-      "1,676\n",
-      "3\n",
-      "None\n",
-      "Under 1/2 Acre, \n",
       " \n",
-      "$209,000\n",
-      "913 Madison Dr\n",
-      "Rock Springs, WY 82901\n",
-      "3\n",
-      "1,344\n",
-      "2\n",
-      "None\n",
-      "Under 1/2 Acre, \n",
       " \n",
-      "$199,900\n",
-      "1344 Teton Street\n",
-      "Rock Springs, WY 82901\n",
-      "3\n",
-      "1,920\n",
-      "2\n",
-      "None\n",
-      "Under 1/2 Acre, \n",
       " \n",
-      "$196,900\n",
-      "4 Minnies Lane\n",
-      "Rock Springs, WY 82901\n",
-      "3\n",
-      "1,664\n",
-      "2\n",
-      "None\n",
-      "2.02 Acres\n",
       " \n"
      ]
     }
    ],
    "source": [
+    "l = []\n",
     "for item in all:\n",
-    "    print(item.find('h4', {'class': 'propPrice'}).text.replace('\\n', '').replace(' ',''))\n",
-    "    print(item.find_all('span', {'class': 'propAddressCollapse'})[0].text)\n",
-    "    print(item.find_all('span', {'class': 'propAddressCollapse'})[1].text)\n",
+    "    d = {}\n",
+    "    d['Address'] = item.find_all('span', {'class': 'propAddressCollapse'})[0].text\n",
+    "    d['Locality'] = item.find_all('span', {'class': 'propAddressCollapse'})[1].text\n",
+    "    d['Price'] = item.find('h4', {'class': 'propPrice'}).text.replace('\\n', '').replace(' ','')\n",
+    "\n",
     "    try:\n",
-    "        print(item.find('span', {'class': 'infoBed'}).find('b').text)\n",
+    "        d['Beds'] = item.find('span', {'class': 'infoBed'}).find('b').text\n",
     "    except:\n",
-    "        print(None)\n",
+    "        d['Beds'] = None\n",
     "    \n",
     "    try:\n",
-    "        print(item.find('span', {'class': 'infoSqFt'}).find('b').text)\n",
+    "        d['Area'] = item.find('span', {'class': 'infoSqFt'}).find('b').text\n",
     "    except:\n",
-    "        print(None)\n",
+    "        d['Area'] = None\n",
     "        \n",
     "    try:\n",
-    "        print(item.find('span', {'class': 'infoValueFullBath'}).find('b').text)\n",
+    "        d['Full Baths'] = item.find('span', {'class': 'infoValueFullBath'}).find('b').text\n",
     "    except:\n",
-    "        print(None)\n",
+    "        d['Full Baths'] = None\n",
     "    \n",
     "    try:\n",
-    "        print(item.find('span', {'class': 'infoValueHalfBath'}).find('b').text)\n",
+    "        d['Half Baths'] = item.find('span', {'class': 'infoValueHalfBath'}).find('b').text\n",
     "    except:\n",
-    "        print(None)\n",
+    "        d['Half Baths'] = None\n",
+    "        \n",
     "    for column_group in item.find_all('div', {'class': 'columnGroup'}):\n",
-    "#         print(column_group)\n",
     "        for feature_group, feature_name in zip(column_group.find_all('span', {'class': 'featureGroup'}), column_group.find_all('span', {'class': 'featureName'})):\n",
-    "#             print(feature_group.text, feature_name.text)\n",
     "            if \"Lot Size\" in feature_group.text:\n",
-    "                print(feature_name.text)\n",
+    "                d['Lot Size'] = feature_name.text\n",
+    "    l.append(d)       \n",
     "\n",
     "    print(' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46f5b907",
+   "execution_count": 69,
+   "id": "0e0f63e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas\n",
+    "df = pandas.DataFrame(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f0d1a14b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Locality</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Beds</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Full Baths</th>\n",
+       "      <th>Half Baths</th>\n",
+       "      <th>Lot Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0 Gateway</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$725,000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1003 Winchester Blvd.</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$452,900</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.21 Acres</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>600 Talladega</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$396,900</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3,154</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3239 Spearhead Way</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$389,900</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3,076</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Under 1/2 Acre,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>522 Emerald Street</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$254,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,172</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Under 1/2 Acre,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1302 Veteran's Drive</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$252,900</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1,932</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.27 Acres</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1021 Cypress Cir</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$210,000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1,676</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Under 1/2 Acre,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>913 Madison Dr</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$209,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,344</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Under 1/2 Acre,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1344 Teton Street</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$199,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,920</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Under 1/2 Acre,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4 Minnies Lane</td>\n",
+       "      <td>Rock Springs, WY 82901</td>\n",
+       "      <td>$196,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,664</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.02 Acres</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Address                Locality     Price  Beds   Area  \\\n",
+       "0              0 Gateway  Rock Springs, WY 82901  $725,000  None   None   \n",
+       "1  1003 Winchester Blvd.  Rock Springs, WY 82901  $452,900     4   None   \n",
+       "2          600 Talladega  Rock Springs, WY 82901  $396,900     5  3,154   \n",
+       "3     3239 Spearhead Way  Rock Springs, WY 82901  $389,900     4  3,076   \n",
+       "4     522 Emerald Street  Rock Springs, WY 82901  $254,000     3  1,172   \n",
+       "5   1302 Veteran's Drive  Rock Springs, WY 82901  $252,900     4  1,932   \n",
+       "6       1021 Cypress Cir  Rock Springs, WY 82901  $210,000     4  1,676   \n",
+       "7         913 Madison Dr  Rock Springs, WY 82901  $209,000     3  1,344   \n",
+       "8      1344 Teton Street  Rock Springs, WY 82901  $199,900     3  1,920   \n",
+       "9         4 Minnies Lane  Rock Springs, WY 82901  $196,900     3  1,664   \n",
+       "\n",
+       "  Full Baths Half Baths          Lot Size  \n",
+       "0       None       None               NaN  \n",
+       "1          4       None        0.21 Acres  \n",
+       "2          3       None               NaN  \n",
+       "3          3          1  Under 1/2 Acre,   \n",
+       "4          3       None  Under 1/2 Acre,   \n",
+       "5          2       None        0.27 Acres  \n",
+       "6          3       None  Under 1/2 Acre,   \n",
+       "7          2       None  Under 1/2 Acre,   \n",
+       "8          2       None  Under 1/2 Acre,   \n",
+       "9          2       None        2.02 Acres  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9cef0225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Output.csv\")"
+   ]
   }
  ],
  "metadata": {
